syntax = "proto3";

option go_package = "./proto";

package bookstore;

service BookService {
  rpc CreateBook(CreateBookRequest) returns (CreateBookResponse);
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
  rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse);
}

message Book {
  int32 id = 1;
  string title = 2;
  string author = 3;
  string genre = 4;
  string year = 5;
  float price = 6;
}

message CreateBookRequest {
  string title = 1;
  string author = 2;
  string genre = 3;
  int32 year = 4;
  float price = 5;
}

message CreateBookResponse {
  Book book = 1;
}

message GetBookRequest {
  int32 id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message UpdateBookRequest {
  Book book = 1;
}

message UpdateBookResponse {
  Book book = 1;
}

message DeleteBookRequest {
  int32 id = 1;
}

message DeleteBookResponse {
  bool success = 1;
}

message ListBooksRequest {
}

message ListBooksResponse {
  repeated Book books = 1;
}
